src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirect_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirect_StringErrorContext.class */
public final class NVBindlessMultiDrawIndirect_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglMultiDrawArraysIndirectBindlessNV(IJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawArraysIndirectBindlessNV(ILjava/nio/ByteBuffer;III)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawArraysIndirectBindlessNV(IJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectErrorContext");
        methods.put("nglMultiDrawElementsIndirectBindlessNV(IIJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawElementsIndirectBindlessNV(IILjava/nio/ByteBuffer;III)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawElementsIndirectBindlessNV(IIJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectErrorContext");
        return methods;
    }
}
